# sentiora-ai

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Makefile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 08353c313728_expand_event_normalization_schema.py  9937779eba96_add_timezone_aware_timestamps.py  9af28a066d25_expand_event_normalization_schema.py  c36058928e24_create_sources_and_events_tables.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: health.py  version.py
backend/app/core/: config.py  logging.py  metadata.py
backend/app/db/: session.py
backend/app/db/models/: __init__.py  event.py  source.py
backend/app/ingestion/: run_ingestion.py  run_noaa_ingestion.py
backend/app/ingestion/adapters/: gdacs.py  noaa.py
backend/app/ingestion/clients/: base.py
backend/app/ingestion/normalizers/: gdacs.py  noaa.py
backend/app/ingestion/schemas/: gdacs.py  noaa.py  normalized_event.py
backend/app/ingestion/services/: event_ingestion.py  gdacs_ingestion.py  ingestion_runner.py  noaa_ingestion.py
backend/app/ingestion/tests/: test_gdacs_normalizer.py  test_noaa_client.py  test_noaa_normalizer.py
backend/app/tests/: test_health.py  test_version.py
backend/data/raw/noaa/: alerts_20260606_172028.json  alerts_20260606_181120.json  alerts_20260606_182125.json  alerts_20260606_182432.json  alerts_20260606_182602.json  alerts_20260607_053546.json  alerts_20260607_053907.json
docs/: dev-log.md
